# freight-crm

./: .gitignore  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build-windows.yml
build_manual/: 00_audit.md  00_overview.md  01_brokerage_core.md  02_crm.md  03_customer_success.md  04_lead_gen_subagents.md  05_newsletter.md  06_content_brand.md  07_saas.md
docs/: BUILD_PLAN.md  PROGRESS.md  WRITING_RULES.md
scripts/: bundle_tesseract.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: vision_ocr
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: activities.rs  contacts.rs  diagnostics.rs  enrich.rs  import.rs  keychain.rs  mod.rs  ocr.rs  settings.rs  startup.rs  sync.rs  users.rs
src-tauri/swift/: vision_ocr.swift
src/components/activities/: ActivityFeed.tsx  QuickCallModal.tsx
src/components/common/: ErrorBoundary.tsx  LoginScreen.tsx  Modal.tsx  StartupCheck.tsx  SyncDot.tsx  Toast.tsx  UpdateChecker.tsx
src/components/contacts/: ContactDetail.tsx  ContactFilters.tsx  ContactForm.tsx  ContactList.tsx  ContactRow.tsx
src/components/dashboard/: FollowUpQueue.tsx  StatsRow.tsx  USHeatmap.tsx
src/components/diagnostics/: DiagnosticsPanel.tsx
src/components/import/: ColumnMapper.tsx  DropZone.tsx  EnrichmentPanel.tsx  ImageOCR.tsx  ImportHistory.tsx  ImportHub.tsx  ImportReview.tsx  MergeDialog.tsx  PasteParser.tsx  PdfOcr.tsx  QuickAddForm.tsx
src/components/layout/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  StatusBar.tsx
src/features/strategy-map/: StrategyMap.tsx
src/hooks/: useActivities.ts  useContacts.ts  useKeyboard.ts  useSync.ts  useToast.ts
src/lib/: db.ts  dedup.ts  errors.ts  import-parse.ts  paste-parse.ts  phone.ts
src/store/: contacts.ts  sync.ts  ui.ts
src/types/: index.ts
src/views/: ContactDetailView.tsx  ContactsView.tsx  DashboardView.tsx  ImportView.tsx  SettingsView.tsx
