[package]
name = "freight-crm"
version = "0.1.0"
description = "Personal CRM for produce freight brokerage"
authors = ["Francisco Pelaez"]
edition = "2021"

[lib]
name = "freight_crm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs   = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
rusqlite          = { version = "0.32", features = ["bundled"] }
uuid              = { version = "1", features = ["v4"] }
chrono            = { version = "0.4", features = ["serde"] }
keyring           = "3"
regex             = "1"
dirs              = "5"
base64            = "0.22"
sha2              = "0.10"
pdf-extract       = "0.7"
lopdf             = "0.34"
