[package]
name = "freight-crm"
version = "0.6.0"
description = "Personal CRM for produce freight brokerage"
authors = ["Francisco Pelaez"]
edition = "2021"

[lib]
name = "freight_crm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
rusqlite          = { version = "0.32", features = ["bundled"] }   # kept for one-time migration only
libsql            = { version = "0.9", default-features = false, features = ["remote", "tls"] }
uuid              = { version = "1", features = ["v4"] }
chrono            = { version = "0.4", features = ["serde"] }
regex             = "1"
dirs              = "5"
base64            = "0.22"
sha2              = "0.10"
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
scraper           = "0.22"
tokio             = { version = "1", features = ["time", "rt", "rt-multi-thread"] }
futures           = "0.3"

# Platform-specific credential storage (keyring v3 has no default backend)
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
